fixed a bug where it would create a before above buttons in tabs

--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -460,6 +460,17 @@ aside p:last-child {
         order: 99;
         width: 100%;
         padding: 0 2rem;
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            &::before {
+                display: none;
+            }
+        }
     }
 
     .tabbed-set label {
