--- a/blog/templates/blog/includes/post_comments_messages.html
+++ b/blog/templates/blog/includes/post_comments_messages.html
@@ -1,6 +1,7 @@
 {% load comments %}
 
-<div class="ps-4 comment-card{% if comment.parent %} ms-4 comment-reply comment-reply-{{ comment.parent.pk }}{% endif %}">
+{{comment}}
+{% comment %} <div class="ps-2 comment-card{% if comment.parent %} ms-3 comment-reply comment-reply-{{ comment.parent.pk }}{% endif %}">
     <div id="comment-{{ comment.id }}" class="card mt-2">
         <div class="card-header">
             <h4>
@@ -106,4 +107,4 @@
             {% endautoescape %}
         </div>
     </div>
-</div>
+</div> {% endcomment %}
