--- a/blog/templates/blog/post_card_in_lists.html
+++ b/blog/templates/blog/post_card_in_lists.html
@@ -22,7 +22,11 @@
     <footer class="card-footer">
         <span class="d-flex">
             <span class="col">
+             {% if not archive %}
                 <a class="card-link" href="{{ post.get_absolute_url }}">Continue reading</a>
+            {% else %}
+                <a class="card-link" href="{% url 'blog:archive_date_detail' year=g_year month=g_month day=g_day slug=post.slug %}">Continue reading</a>
+            {% endif %}
             </span>
             {% if post.url_to_article %}
                 <span class="col">
