--- a/blog/templates/blog/lists/tags_list.html
+++ b/blog/templates/blog/lists/tags_list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base_post.html' %}
+{% load super_buttons %}
 
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3 me-0">
@@ -11,25 +12,9 @@
                                 <strong class="text-muted">Tag #{{ tag.id }}</strong>
                             </span>
                             <span class="col-auto">
-                                {% block super_buttons %}
-                                    {% if user.is_superuser %}
-                                        <div class="btn-group float-end">
-                                            <a class="btn btn-secondary" href="{% url 'blog:tag_edit' slug=tag.slug %}">
-                                                <i class="bi bi-pencil-square"></i> Edit
-                                            </a>
-
-                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="tagAdminDropdown-{{ tag.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                                <span class="visually-hidden">Toggle Dropdown</span>
-                                            </button>
-
-                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="tagAdminDropdown-{{ tag.id }}">
-                                                <a class="dropdown-item" href="{% url 'admin:taggit_tag_change' object_id=tag.id %} ">
-                                                    <i class="bi bi-pencil-square"></i> Edit in Admin
-                                                </a>
-                                            </ul>
-                                        </div>
-                                    {% endif %}
-                                {% endblock super_buttons %}
+                                {% if user.is_superuser %}
+                                    {% sb tag %}
+                                {% endif %}
                             </span>
                         </span>
                     </div>
@@ -40,7 +25,7 @@
                     <div class="card-footer">
                         <span class="d-flex">
                             <span class="col">
-                                <a class="card-link" href="{% url 'blog:post_tagged_with' slug=tag.slug %}">All posts tagged with {{ tag.name }}</a>
+                                <a class="card-link" href="{{ tag.get_absolute_url }}">All posts tagged with {{ tag.name }}</a>
                             </span>
                         </span>
                     </div>
