--- a/blog/templates/blog/includes/super_buttons.html
+++ b/blog/templates/blog/includes/super_buttons.html
@@ -1,36 +1,46 @@
 <div class="btn-group float-end">
-    <a class="btn btn-secondary" href="{{ post.get_absolute_update_url }}">
+    <a class="btn btn-secondary" href="{{ object.get_absolute_update_url }}">
         <i class="bi bi-pencil-square"></i> Edit
     </a>
 
-    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="postAdminDropdown-{{ post.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="objectAdminDropdown-{{ object.id }}" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="visually-hidden">Toggle Dropdown</span>
     </button>
-    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="postAdminDropdown-{{ post.id }}">
-        {% if not post.published_date %}
-            <a class="dropdown-item" href="{{ post.get_absolute_publish_url }}">
-                <i class="bi bi-file-earmark-arrow-up"></i> Publish
-            </a>
+    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="objectAdminDropdown-{{ object.id }}">
+        {% if not object.published_date %}
+            {% if object.get_absolute_publish_url or object.get_absolute_publish_withdrawn_url %}
+                {% if object.get_absolute_publish_url %}
+                    <a class="dropdown-item" href="{{ object.get_absolute_publish_url }}">
+                        <i class="bi bi-file-earmark-arrow-up"></i> Publish
+                    </a>
+                {% endif %}
 
-            <a class="dropdown-item" href="{{ post.get_absolute_publish_withdrawn_url }}">
-                <i class="bi bi-file-earmark-lock"></i> Publish Withdrawn
-            </a>
+                {% if object.get_absolute_publish_withdrawn_url %}
+                    <a class="dropdown-item" href="{{ object.get_absolute_publish_withdrawn_url }}">
+                        <i class="bi bi-file-earmark-lock"></i> Publish Withdrawn
+                    </a>
+                {% endif %}
 
-            <div class="dropdown-divider"></div>
+                <div class="dropdown-divider"></div>
+            {% endif %}
         {% endif %}
 
-        <a class="dropdown-item" href="{{ post.get_absolute_clone_url }}">
-            <i class="bi bi-stickies"></i> Clone
-        </a>
+        {% if object.get_absolute_clone_url %}
+            <a class="dropdown-item" href="{{ object.get_absolute_clone_url }}">
+                <i class="bi bi-stickies"></i> Clone
+            </a>
+        {% endif %}
 
-        <a class="dropdown-item" href="{{ post.get_absolute_admin_update_url }}">
+        <a class="dropdown-item" href="{{ object.get_absolute_admin_update_url }}">
             <i class="bi bi-pencil-square"></i> Edit in Admin
         </a>
 
-        <div class="dropdown-divider"></div>
+        {% if object.get_absolute_delete_url %}
+            <div class="dropdown-divider"></div>
 
-        <a class="dropdown-item" href="{{ post.get_absolute_delete_url }}">
-            <i class="bi bi-trash"></i> Delete
-        </a>
+            <a class="dropdown-item" href="{{ object.get_absolute_delete_url }}">
+                <i class="bi bi-trash"></i> Delete
+            </a>
+        {% endif %}
     </ul>
 </div>
