--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load instance %}
+{% load instance super_buttons %}
 
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3 me-0">
@@ -17,22 +17,7 @@
                                         </span>
                                         {% if user.is_superuser %}
                                             <span class="col-auto">
-                                                {% block super_buttons %}
-                                                    <div class="btn-group float-end">
-                                                        <a class="btn btn-secondary" href="{{ e.get_absolute_update_url }}">
-                                                            <i class="bi bi-pencil-square"></i> Edit
-                                                        </a>
-
-                                                        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="elementAdminDropdown-{{ e.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <span class="visually-hidden">Toggle Dropdown</span>
-                                                        </button>
-                                                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="elementAdminDropdown-{{ e.id }}">
-                                                            <a class="dropdown-item" href="{{ e.get_absolute_admin_update_url }}">
-                                                                <i class="bi bi-pencil-square"></i> Edit in Admin
-                                                            </a>
-                                                        </ul>
-                                                    </div>
-                                                {% endblock super_buttons %}
+                                                {% sb e %}
                                             </span>
                                         {% endif %}
                                     </div>
