--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -1,5 +1,5 @@
 {% extends 'pages/base_page.html' %}
-{% load comments %}
+{% load comments super_buttons %}
 
 {% block page_head %}
     {% if page.page_head %}
@@ -23,31 +23,9 @@
                     <h2>Page #{{ page.id }}</h2>
                 </span>
                 <span class="col-auto">
-                    {% block super_buttons %}
-                        {% if user.is_superuser %}
-                            <div class="btn-group float-end">
-                                <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=page.slug %}">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-
-                                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="pageAdminDropdown-{{ page.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <span class="visually-hidden">Toggle Dropdown</span>
-                                </button>
-
-                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="pageAdminDropdown-{{ page.id }}">
-                                    <a class="dropdown-item" href="{% url 'admin:pages_page_change' object_id=page.id %}">
-                                        <i class="bi bi-pencil-square"></i> Edit in Admin
-                                    </a>
-
-                                    <div class="dropdown-divider"></div>
-
-                                    <a class="dropdown-item" href="{% url 'pages:page_delete' slug=page.slug %}">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </a>
-                                </ul>
-                            </div>
-                        {% endif %}
-                    {% endblock super_buttons %}
+                    {% if user.is_superuser %}
+                        {% sb page %}
+                    {% endif %}
                 </span>
             </div>
 
