published_date --> pub_date

--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -3,12 +3,12 @@
 {% block card_div %}
     <article id="post-{{ post.slug }}" class="card shadow">
 {% endblock card_div %}
-    {% if post.published_date %}
+    {% if post.pub_date %}
         {% if post.was_published_recently %}
             <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-success p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="New Post"><span class="visually-hidden">New Post</span></span>
         {% endif %}
 
-        {% if post.published_date > now %}
+        {% if post.pub_date > now %}
             <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-warning p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Scheduled"><span class="visually-hidden">Scheduled</span></span>
         {% endif %}
     {% else %}
