--- a/blog/templates/blog/includes/post_dates.html
+++ b/blog/templates/blog/includes/post_dates.html
@@ -1,8 +1,8 @@
 <p class="mb-auto text-small text-muted">
-    {% if not post.published_date %}
+    {% if not post.pub_date %}
         {{ post.created_date|date:'l, d F Y H:i:s' }}
     {% else %}
-        {{ post.published_date|date:'l, d F Y H:i:s' }}
+        {{ post.pub_date|date:'l, d F Y H:i:s' }}
     {% endif %}
     by {{ post.author }}
 </p>
