will make a changelog later, but comments basically (and HUGE ASS bug fix)

--- a/blog/templates/blog/category_confirm_delete.html
+++ b/blog/templates/blog/category_confirm_delete.html
@@ -1,14 +1,13 @@
 {% extends 'sub_base_main.html' %}
-{% load bootstrap5 %}
+{% load widget_tweaks project_tags %}
 
 {% block main %}
     <h3>Delete: {{ category.id }} - {{ category.title }}</h3>
     <form method="POST" enctype="multipart/form-data" class="form">
         {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
-        {% endbuttons %}
+        {% form form %}
+
+        <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
     </form>
     {{ form.media }}
 {% endblock main %}
