--- a/khoBlog/templates/account/connections.html
+++ b/khoBlog/templates/account/connections.html
@@ -1,5 +1,5 @@
 {% extends 'sub_base.html' %}
-{% load socialaccount bootstrap5 %}
+{% load socialaccount %}
 
 {% block content %}
     {% if form.accounts %}
