--- a/todo/templates/todo/delete.html
+++ b/todo/templates/todo/delete.html
@@ -1,5 +1,5 @@
 {% extends 'sub_base.html' %}
-{% load bootstrap5 %}
+{% load widget_tweaks project_tags %}
 
 {% block content %}
     <h3>Delete: {{ task.title }}</h3>
@@ -8,9 +8,7 @@
         <h4>Are you sure ?</h4>
         {{ form.as_p }}
 
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
-        {% endbuttons %}
+        <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
     </form>
 
 {% endblock content %}
